# residc

./: .gitignore  CONTRIBUTING.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
bench/: bench_compression.c  bench_quote.c  experiment_ans.c  experiment_bitio.c  experiment_branchless.c  experiment_combined_write.c  experiment_golomb.c  experiment_k_sweep.c  experiment_mfu_varlen.c  experiment_prediction.c  experiment_qty_runs.c  test_expgolomb.c
core/: residc.c  residc.h
doc/: TECHNIQUE.md  WIRE_FORMAT.md
examples/custom/: quote_example.c
fuzz/: fuzz_decode.c  fuzz_roundtrip.c
rust/: Cargo.toml  README.md  build.rs
rust/benches/: codec_bench.rs
rust/examples/: bench_raw.rs
rust/fuzz/: Cargo.toml
rust/fuzz/fuzz_targets/: decode_arbitrary.rs  roundtrip.rs
rust/src/: bits.rs  lib.rs  mfu.rs  residual.rs
sdk/: .gitignore  Makefile  residc_sdk.c  residc_sdk.h
sdk/python/: example.py
sdk/python/residc/: __init__.py
test/: run_tests.sh  test_adaptive.c  test_bitio.c  test_edge.c  test_framework.h  test_mfu.c  test_roundtrip.c  test_tiered.c  test_zigzag.c
