[package]
name = "residc"
version = "0.1.0"
edition = "2024"
description = "Per-message prediction-residual compression for financial data"
license = "MIT OR Apache-2.0"
repository = "https://github.com/userFRM/residc"
readme = "README.md"
keywords = ["compression", "financial", "market-data", "codec", "low-latency"]
categories = ["compression", "encoding", "no-std::no-alloc"]

[dependencies]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "codec_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
