[package]
name = "residc"
version = "0.2.0"
edition = "2021"
description = "Per-message prediction-residual compression for financial data. Wraps the C core via FFI."
license = "MIT OR Apache-2.0"
repository = "https://github.com/userFRM/residc"
readme = "README.md"
keywords = ["compression", "financial", "market-data", "codec", "low-latency"]
categories = ["compression", "encoding"]
build = "build.rs"

[dependencies]

[build-dependencies]
cc = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "codec_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
