[package]
name = "residc-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
residc = { path = ".." }

[[bin]]
name = "roundtrip"
path = "fuzz_targets/roundtrip.rs"
doc = false

[[bin]]
name = "decode_arbitrary"
path = "fuzz_targets/decode_arbitrary.rs"
doc = false
